Fix for too long keywords in the advanced search form (#2918) (#2928)
* Fix for too long keywords in the advanced search form

Issue: https://github.com/geonetwork/core-geonetwork/issues/2918

* Remove the bold font

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_search_default.less
@@ -122,6 +122,16 @@
 
     }
   }
+  .bootstrap-tagsinput {
+    .tag {
+      white-space: normal;
+      display: inline-flex;
+      text-align: left;
+      line-height: 1.5em;
+      font-weight: normal;
+      margin-bottom: 3px;
+    }
+  }
 }
 
 .gn-row-filters {
